fix req body & add dtos
