# src/models/database/accountPassword/accountPassword.go
@@ -10,6 +10,11 @@ type AccountPassword struct {
 	Password string `gorm:"size:255;not null;" json:"password"`
 }
 
+type AccountPasswordInputDto struct {
+	Service  string `gorm:"size:255;not null;unique" json:"service"`
+	Password string `gorm:"size:255;not null;" json:"password"`
+}
+
 type AccoutnPasswordRepo struct {
 	db *gorm.DB
 }
